# fast-pdf

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  benchmark_results.json  benchmark_results.md  ferropdf-creation-prompt.md  pyproject.toml
.github/workflows/: benchmark.yml  ci.yml  release.yml
benchmarks/: benchmark.py  benchmark_integrations.py  benchmark_results.md  benchmark_results_integration.md  visual_comparison.py
bindings/python/: Cargo.toml
crates/ferropdf-core/: Cargo.toml
crates/ferropdf-layout/: Cargo.toml
crates/ferropdf-layout/src/: block_flow.rs  lib.rs  style_to_taffy.rs  table_layout.rs  taffy_bridge.rs  text.rs
crates/ferropdf-page/: Cargo.toml
crates/ferropdf-parse/: Cargo.toml
crates/ferropdf-parse/src/: html.rs  lib.rs
crates/ferropdf-parse/src/css/: mod.rs  parser.rs  ua.css
crates/ferropdf-render/: Cargo.toml
crates/ferropdf-style/: Cargo.toml
dev/bench/: data.js
examples/: arabic_example.py  basic.py  basic_usage.py  django_example.py  fastapi_example.py  generate_all.py  invoice_example.py
examples/django_app/: manage.py  settings.py  urls.py  views.py
examples/fastapi_app/: main.py
examples/templates/: invoice.html
output/: dashboard_rendered.html
python-wrapper/fastpdf/: __init__.py  _engine.pyi  core.py  types.py  utils.py
python/ferropdf/: __init__.py
rust-engine/: Cargo.toml
rust-engine/benches/: render_bench.rs
rust-engine/src/: bindings.rs  error.rs  lib.rs
rust-engine/tests/: integration_test.rs
tests/: conftest.py  test_basic.py  test_features.py  test_golden.py
(+86 files in other folders)
